HelloUltraviolet/Fixtures/RejectedSource/Expressions/TransmuteUnsafe/Expected.uv
//! Expected diagnostic metadata for the TransmuteUnsafe rejected-source specimen.

expectedDiagnostic("", "rule.16.Transmute-Unsafe-Err")
